tests/spec/core_functions/color/hwb/error/one_arg.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/hwb/error/one_arg.hrx"

mod alpha {

    // Ignoring "unit", error tests are not supported yet.

    // Ignoring "var", error tests are not supported yet.
}
mod blackness {

    // Ignoring "too_high", error tests are not supported yet.

    // Ignoring "too_low", error tests are not supported yet.

    // Ignoring "test_type", error tests are not supported yet.
    mod unit {

        // Ignoring "none", error tests are not supported yet.

        // Ignoring "wrong", error tests are not supported yet.
    }
    mod var {

        // Ignoring "alpha", error tests are not supported yet.

        // Ignoring "no_alpha", error tests are not supported yet.
    }
}
mod hue {

    // Ignoring "test_type", error tests are not supported yet.

    // Ignoring "var", error tests are not supported yet.
}
mod list {

    // Ignoring "bracketed", error tests are not supported yet.

    // Ignoring "comma_separated", error tests are not supported yet.

    // Ignoring "empty", error tests are not supported yet.

    // Ignoring "four_elements", error tests are not supported yet.

    // Ignoring "one_element", error tests are not supported yet.

    // Ignoring "two_elements", error tests are not supported yet.
}

// Ignoring "quoted_var_slash", error tests are not supported yet.
mod whiteness {

    // Ignoring "too_high", error tests are not supported yet.

    // Ignoring "too_low", error tests are not supported yet.

    // Ignoring "test_type", error tests are not supported yet.
    mod unit {

        // Ignoring "none", error tests are not supported yet.

        // Ignoring "wrong", error tests are not supported yet.
    }

    // Ignoring "var", error tests are not supported yet.
}
